[gd_scene load_steps=2 format=2]

[ext_resource path="res://components/ItemProperty.gd" type="Script" id=1]

[node name="ItemProperty" type="VBoxContainer"]
margin_right = 192.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 192.0
margin_bottom = 14.0
text = "Text:"

[node name="TextEdit" type="TextEdit" parent="."]
margin_top = 18.0
margin_right = 192.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 128 )
highlight_all_occurrences = true
smooth_scrolling = true
wrap_enabled = true

[node name="LeftSlotCheckButton" type="CheckButton" parent="."]
margin_top = 150.0
margin_right = 192.0
margin_bottom = 190.0
text = "Left Slot"

[node name="RightSlotCheckButton" type="CheckButton" parent="."]
margin_top = 194.0
margin_right = 192.0
margin_bottom = 234.0
text = "Right Slot"

[node name="CommentCheckButton" type="CheckButton" parent="."]
margin_top = 238.0
margin_right = 192.0
margin_bottom = 278.0
text = "Comment"

[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="toggled" from="LeftSlotCheckButton" to="." method="_on_LeftSlotCheckButton_toggled"]
[connection signal="toggled" from="RightSlotCheckButton" to="." method="_on_RightSlotCheckButton_toggled"]
[connection signal="toggled" from="CommentCheckButton" to="." method="_on_CommentCheckButton_toggled"]
